# AstarScan

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
apps/web/: components.json  nuxt.config.ts  package.json  tsconfig.json  wrangler.toml
apps/web/app/assets/css/: main.css
apps/web/app/components/: OcrResultPanel.vue
apps/web/app/components/ui/button/: Button.vue  index.ts
apps/web/app/components/ui/select/: SelectContent.vue  SelectItem.vue  SelectLabel.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue  SelectSeparator.vue  SelectTrigger.vue
apps/web/app/lib/ndlocr/types/: model-config.ts  ocr.ts  recognition-worker.ts
apps/web/app/lib/ndlocr/worker/: layout-detector.ts  (+6 more)
apps/web/app/pages/: index.vue  privacy.vue
apps/web/app/services/: blur-detection.ts  canny-detector.ts  deskew.ts  doc-detector.ts  docaligner-backend.ts  edge-density.ts  gemma-backend.ts  gemma4-browser-backend.ts  image-enhancer.ts  jscanify-backend.ts  motion-detection.ts  ocr-service.ts  opencv-loader.ts  ort-model-loader.ts  perspective-warper.ts  phash-dedup.ts  phash.ts  session-store.ts  smolvlm-backend.ts  ssim-dedup.ts  visual-dedup.ts
apps/web/app/types/: globals.d.ts  workspace-smoke.ts
apps/web/public/: _headers
scripts/: cf-pages-build.sh  download-ocr-models.sh  download-opencv.sh  download-siglip-model.sh  evaluate-video.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
