[package]
name = "astarscan"
version = "0.1.0"
description = "Edge document scanner — video-stream page extraction to PDF"
authors = ["Astar Works"]
license = "MIT"
repository = "https://github.com/AstarWorks/AstarScan"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "astarscan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
